# amule

./: .clang-tidy  .clang-tidy-new-code  .gitignore  LICENSE.md  config.h.cm  org.amule.aMule.desktop  org.amule.aMule.gui.desktop
.github/workflows/: ccpp.yml  clang-tidy.yml  packaging.yml  release.yml
cmake/: options.cmake  source-vars.cmake  wx.cmake
docs/: INSTALL.md  QUICKSTART-AMULEAPI.md  THIRDPARTY.md  translations.md
docs/api/: EVENTS.md  REFERENCE.md
docs/man/: CMakeLists.txt  amuleapi.1.in
docs/man/po/: manpages-de.po  manpages-es.po  manpages-fr.po  manpages-hu.po  manpages-it.po  manpages-lv.po  manpages-pt_BR.po  manpages-ro.po  manpages-ru.po  manpages-ta.po  manpages-tr.po  manpages-zh_TW.po
packaging/flathub/: org.amule.aMule.yaml
packaging/linux/appimage/: AppRun  build.sh
packaging/linux/flatpak/: org.amule.aMule.yaml.in
packaging/macos/: build.sh
packaging/windows/: build.sh  installer_strings.c  po-to-nsh.py
po/: CMakeLists.txt  LINGUAS  amule.pot  ar.po  ast.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et_EE.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  it_CH.po  ja.po  ko_KR.po  lt.po  lv.po  nl.po  nn.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sq.po  sv.po  ta.po  tr.po  (+3 more)
src/: AddFriend.cpp  AppImageIntegration.cpp  BarShader.cpp  BaseClient.cpp  CFile.cpp  CMakeLists.txt  CatDialog.cpp  ClientRef.h  CommentDialog.cpp  CommentDialogLst.cpp  CommentDialogLst.h  DownloadQueue.cpp  DownloadQueue.h  ECSpecialCoreTags.cpp  ECSpecialMuleTags.cpp  ED2KLinkParser.cpp  ExternalConn.cpp  ExternalConn.h  ExternalConnector.cpp  FileDetailDialog.cpp  FirstRunWizard.cpp  FriendListCtrl.cpp  GenericClientListCtrl.cpp  GuiEvents.cpp  GuiEvents.h  HTTPDownload.cpp  InstanceLock.cpp  InstanceLock.h  KadDlg.cpp  KnownFile.cpp  KnownFile.h  LibSocket.cpp  LibSocket.h  LibSocketAsio.cpp  MD4Hash.h  MuleColour.h  MuleListCtrl.cpp  MuleListCtrl.h  MuleLogCtrl.cpp  MuleLogCtrl.h  (+40 more)
src/kademlia/kademlia/: Search.cpp
src/kademlia/net/: KademliaUDPListener.cpp
src/libs/common/: FileFunctions.cpp  LocaleInit.cpp  MuleDebug.cpp
src/libwebcommon/: CMakeLists.txt  ConstantTime.cpp  ConstantTime.h  Etag.cpp  Etag.h  HeaderParse.cpp  HeaderParse.h  JsonWriter.cpp  JsonWriter.h  Jwt.cpp  Jwt.h  PathPatterns.cpp  PathPatterns.h  PicoJson_Inc.h  Role.h  picojson.LICENSE  picojson.h
src/utils/aLinkCreator/: alc.desktop
src/utils/cas/: configfile.c
src/utils/wxCas/: wxcas.desktop
src/webapi/: AmuleApiConfig.cpp  AmuleApiConfig.h  Api.cpp  Api.h  App.cpp  App.h  Auth.cpp  Auth.h  CMakeLists.txt  EventBus.cpp  EventBus.h  EventDiff.cpp  EventDiff.h  HttpServer.cpp  HttpServer.h  Refresher.cpp  Refresher.h  RefresherTick.cpp  State.cpp  State.h  StaticFs.cpp  StaticFs.h  TtlCache.h
src/webapi/static/: index.html
unittests/curl-tests/amuleapi/: 01-version-and-errors.sh  02-auth.sh  03-read-status.sh  04-read-downloads-shared.sh  05-read-servers-kad-categories-prefs.sh  06-read-logs.sh  19-search.sh  (+23 more)
unittests/tests/: AmuleApiConfigTest.cpp  AuthTest.cpp  CMakeLists.txt  EtagTest.cpp  EventBusTest.cpp  EventDiffTest.cpp  JsonWriterTest.cpp  JwtTest.cpp  PathPatternsTest.cpp  RefresherTest.cpp  StateTest.cpp  StaticFsTest.cpp
(+32 files in other folders)
